# axis

./: .gitignore  Cargo.toml  README.md  pyproject.toml  scripts.py
book/: patron-criteria.md
book/algebra de tipos/: StandardTypes.md  mutabilidad y dinamismo.md
data/: axis-conf.yml  unicode-mirroring-glyphs.txt
docs/: Data model.md  api-model.md  cooperacion.md  fundamentos de diseño.md  matching is dispatching.md  syntax.md  tipos y cualificadores.md
docs/algebra de tipos/: captura enmascarada.md
src/: derive.py  pure.py  trust.py  undefined.py
src/axis/: DESIGN.md
src/axis/common/: keyspace.py
src/axis/components/ast/: op.py  parser.py
src/axis/components/ast/grammar/: README.md  axis copy.lark  axis.lark  operators.lark  suite.lark  tools.lark
src/axis/components/dfg/: __init__.py  analysis.py  eval.py  evaluation.py  mark.py  model.py  processor.py  visual.py  visualization.py
src/axis/components/entity/: know.py
src/axis/components/metadata/: metadata.py
src/axis/components/morph/: morph.py
src/axis/components/outline/: SPEC.md  model.py  parser.py
src/axis/components/syn/: ast.py  model.py  processing.py
src/axis/components/syn/grammar/: axis.lark  expr.lark  mod.lark  operators.lark  suite.lark
src/axis/components/tuple/: __init__.py  grammar.lark  model.old.py  model.py  syntax.py
src/axis/components/value/: model.py
src/axis/front/outline/: outlint.py
src/axis/front/syn/: ast.py  op.py  val.py
src/axis/front/syn/grammar/: axis.lark
src/axis/parser/: Cargo.toml
src/axis/parser/src/: axis.pest  lib.rs
src/axis/syn/: __init__.py  ast.py  op.py
tests/: dfg.py  egg.py  test_pure.py  test_syn.py
tests/trust/: test_trust.py
