[tool.poetry]
name = "axis"
version = "0.1.0"
description = ""
authors = ["jdluque <jdluque@leitat.org>"]
readme = "README.md"

[tool.poetry.scripts]
axis = "axis:main"
test = "scripts:run_test"
dev = "scripts:run_dev"

[tool.poetry.dependencies]
python = "^3.12"
rustimport = "^1.3.4"
pegen = "^0.3.0"
lark = { extras = ["interegular"], version = "^1.1.8" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
rich = "^13.7.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
