[tool.poetry]
name = "axis"
version = "0.1.0"
description = ""
authors = ["jdluque <jdluque@leitat.org>"]
readme = "README.md"

[tool.poe.tasks.dev]
help = "Run development environment (watch-mode testing)"
script = "scripts:run_dev"

[tool.poe.tasks.test]
help = "Run tests"
script = "scripts:run_tests"

[tool.poe.tasks.build-docs]
help = "Build documentation"
script = "scripts:build_docs"

[tool.poe.tasks.axis]
help = "Run AXIS"
script = "axis:main"

[tool.poetry.dependencies]
python = "^3.12"
rustimport = "^1.3.4"
pegen = "^0.3.0"
lark = { extras = ["interegular"], version = "^1.1.8" }
protobase = { path = "../protobase", develop = true }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
rich = "^13.7.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
