[tool.poetry]
name = "axis"
version = "0.1.0"
description = ""
authors = ["jdluque <jdluque@leitat.org>"]
readme = "README.md"

[tool.poe.tasks.watch]
help = "Run watch-mode testing"
script = "scripts:run_watch"

[tool.poe.tasks.test]
help = "Run tests"
script = "scripts:run_tests"

[tool.poe.tasks.build-docs]
help = "Build documentation"
script = "scripts:build_docs"

[tool.poe.tasks.axis]
help = "Run AXIS"
script = "axis:main"

[tool.poetry.dependencies]
python = "^3.12"
#rustimport = "^1.3.4"
lark = { extras = ["interegular"], version = "^1.1.8" }
protobase = { path = "../protobase", develop = true }
frozendict = "^2.4.4"
egglog = "^7.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
rich = "^13.7.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
